// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should match snapshot 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0rem;
  height: 100%;
  left: 0.75rem;
}

.emotion-0 {
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
  color: #545454;
}

.emotion-2 {
  border: 1px solid #B9B9B9;
  border-radius: 4px;
  width: 100%;
  height: 100%;
  background: #FFFFFF;
  color: #000000;
  padding-left: 2.25rem;
  padding-right: 2.5rem;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
}

.emotion-2:focus {
  border: 1px solid #3B3B3B;
}

.emotion-2:focus:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.0625rem #F4F4F4,0rem 0rem 0rem 0.1875rem #B9B9B9;
}

.emotion-2:focus:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-2:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-2:focus::-moz-placeholder {
  color: transparent;
}

.emotion-2:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-2:focus::placeholder {
  color: transparent;
}

.emotion-2::-webkit-input-placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-2::-moz-placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-2:-ms-input-placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-2::placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-2:hover {
  border: 1px solid #545454;
}

.emotion-2:disabled {
  border: 1px solid #747474;
  background: #E6E6E6;
  color: #747474;
}

.emotion-2:disabled::-webkit-input-placeholder {
  color: #747474;
}

.emotion-2:disabled::-moz-placeholder {
  color: #747474;
}

.emotion-2:disabled:-ms-input-placeholder {
  color: #747474;
}

.emotion-2:disabled::placeholder {
  color: #747474;
}

.emotion-3 {
  position: relative;
  margin-left: 0.06 rem;
  margin-right: 0.06 rem;
  height: 2.25rem;
}

<form
    class="emotion-3"
    role="search"
  >
    <div
      class="emotion-1"
    >
      <svg
        class="emotion-0"
        fill="currentColor"
        height="1rem"
        viewBox="0 0 256 256"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="16rem"
          width="16rem"
        />
        <circle
          cx="116"
          cy="116"
          fill="none"
          r="84"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="18"
        />
        <line
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="18"
          x1="175.39356"
          x2="223.99414"
          y1="175.40039"
          y2="224.00098"
        />
      </svg>
    </div>
    <input
      aria-label="Search"
      class="emotion-2"
      placeholder="Search"
      value=""
    />
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <button
        tabindex="-1"
        type="submit"
      >
        Search
      </button>
    </span>
  </form>
</DocumentFragment>
`;

exports[`Search should match snapshot on loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1,150;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -35;
  }

  100% {
    stroke-dasharray: 90,150;
    stroke-dashoffset: -124;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0rem;
  height: 100%;
  left: 0.75rem;
}

.emotion-3 {
  border: 1px solid #B9B9B9;
  border-radius: 4px;
  width: 100%;
  height: 100%;
  background: #FFFFFF;
  color: #000000;
  padding-left: 2.25rem;
  padding-right: 2.5rem;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
}

.emotion-3:focus {
  border: 1px solid #3B3B3B;
}

.emotion-3:focus:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.0625rem #F4F4F4,0rem 0rem 0rem 0.1875rem #B9B9B9;
}

.emotion-3:focus:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-3:focus::-moz-placeholder {
  color: transparent;
}

.emotion-3:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-3:focus::placeholder {
  color: transparent;
}

.emotion-3::-webkit-input-placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-3::-moz-placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-3:-ms-input-placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-3::placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-3:hover {
  border: 1px solid #545454;
}

.emotion-3:disabled {
  border: 1px solid #747474;
  background: #E6E6E6;
  color: #747474;
}

.emotion-3:disabled::-webkit-input-placeholder {
  color: #747474;
}

.emotion-3:disabled::-moz-placeholder {
  color: #747474;
}

.emotion-3:disabled:-ms-input-placeholder {
  color: #747474;
}

.emotion-3:disabled::placeholder {
  color: #747474;
}

.emotion-4 {
  position: relative;
  margin-left: 0.06 rem;
  margin-right: 0.06 rem;
  height: 2.25rem;
}

.emotion-1 {
  -webkit-animation: animation-0 1.5s linear infinite;
  animation: animation-0 1.5s linear infinite;
  width: 16px;
  height: 16px;
  color: #545454;
}

.emotion-0 {
  fill: none;
  stroke: currentColor;
  stroke-width: 5;
  stroke-linecap: round;
  -webkit-animation: animation-1 1s ease-in-out infinite;
  animation: animation-1 1s ease-in-out infinite;
}

<form
    class="emotion-4"
    role="search"
  >
    <div
      class="emotion-2"
    >
      <svg
        class="emotion-1"
        focusable="false"
        viewBox="0 0 50 50"
      >
        <circle
          class="emotion-0"
          cx="25"
          cy="25"
          r="20"
        />
      </svg>
    </div>
    <input
      aria-label="Search"
      class="emotion-3"
      placeholder="Search"
      value=""
    />
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <button
        tabindex="-1"
        type="submit"
      >
        Search
      </button>
    </span>
  </form>
</DocumentFragment>
`;

exports[`Search should match snapshot with value 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0rem;
  height: 100%;
  left: 0.75rem;
}

.emotion-0 {
  height: 1rem;
  width: 1rem;
  min-height: 1rem;
  min-width: 1rem;
  color: #545454;
}

.emotion-2 {
  border: 1px solid #B9B9B9;
  border-radius: 4px;
  width: 100%;
  height: 100%;
  background: #FFFFFF;
  color: #000000;
  padding-left: 2.25rem;
  padding-right: 2.5rem;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
}

.emotion-2:focus {
  border: 1px solid #3B3B3B;
}

.emotion-2:focus:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.0625rem #F4F4F4,0rem 0rem 0rem 0.1875rem #B9B9B9;
}

.emotion-2:focus:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-2:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-2:focus::-moz-placeholder {
  color: transparent;
}

.emotion-2:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-2:focus::placeholder {
  color: transparent;
}

.emotion-2::-webkit-input-placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-2::-moz-placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-2:-ms-input-placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-2::placeholder {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 400;
  font-size: 0.875rem;
  line-height: 1.4285714286;
  letter-spacing: 0.002em;
  color: #545454;
}

.emotion-2:hover {
  border: 1px solid #545454;
}

.emotion-2:disabled {
  border: 1px solid #747474;
  background: #E6E6E6;
  color: #747474;
}

.emotion-2:disabled::-webkit-input-placeholder {
  color: #747474;
}

.emotion-2:disabled::-moz-placeholder {
  color: #747474;
}

.emotion-2:disabled:-ms-input-placeholder {
  color: #747474;
}

.emotion-2:disabled::placeholder {
  color: #747474;
}

.emotion-8 {
  position: relative;
  margin-left: 0.06 rem;
  margin-right: 0.06 rem;
  height: 2.25rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0rem;
  height: 100%;
  right: 0.5rem;
}

.emotion-6 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.01em;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: #545454;
  background: transparent;
  padding: 0.5rem 0.75rem;
  height: 2.25rem;
  padding: 0rem;
  padding-top: 0.125rem;
  padding-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.emotion-6:hover {
  color: #3B3B3B;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-6:active {
  color: #000000;
  background: rgba(0, 0, 0, 0.1);
}

.emotion-6:disabled {
  background: transparent;
  color: #747474;
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.0625rem #F4F4F4,0rem 0rem 0rem 0.1875rem #B9B9B9;
}

.emotion-6:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.01em;
  visibility: visible;
}

.emotion-3 {
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

<form
    class="emotion-8"
    role="search"
  >
    <div
      class="emotion-1"
    >
      <svg
        class="emotion-0"
        fill="currentColor"
        height="1rem"
        viewBox="0 0 256 256"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="16rem"
          width="16rem"
        />
        <circle
          cx="116"
          cy="116"
          fill="none"
          r="84"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="18"
        />
        <line
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="18"
          x1="175.39356"
          x2="223.99414"
          y1="175.40039"
          y2="224.00098"
        />
      </svg>
    </div>
    <input
      aria-label="Search"
      class="emotion-2"
      placeholder="Search"
      value="Search"
    />
    <div
      class="emotion-7"
    >
      <button
        aria-label="Clear search input"
        class="emotion-6"
        type="button"
      >
        <div
          class="emotion-5"
        >
          <div
            class="emotion-4"
          >
            <svg
              class="emotion-3"
              fill="currentColor"
              height="1.25rem"
              viewBox="0 0 256 256"
              width="1.25rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="none"
                height="16rem"
                width="16rem"
              />
              <circle
                cx="128"
                cy="128"
                fill="none"
                r="96"
                stroke="currentColor"
                stroke-miterlimit="10"
                stroke-width="18"
              />
              <line
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="18"
                x1="160"
                x2="96"
                y1="96"
                y2="160"
              />
              <line
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="18"
                x1="160"
                x2="96"
                y1="160"
                y2="96"
              />
            </svg>
          </div>
        </div>
      </button>
    </div>
    <span
      style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
    >
      <button
        tabindex="-1"
        type="submit"
      >
        Search
      </button>
    </span>
  </form>
</DocumentFragment>
`;
